--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -25,7 +25,7 @@
         android:layout_width="397dp"
         android:layout_height="575dp"
         android:layout_marginBottom="160dp"
-        android:contentDescription="@string/fundo2"
+        android:contentDescription="@string/bottom2"
         android:scaleType="centerCrop"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -39,7 +39,7 @@
         android:layout_height="83dp"
         android:layout_marginBottom="8dp"
         android:gravity="center"
-        android:text="@string/loginText"
+        android:text="@string/textLoginPage"
         android:textColor="#FFFFFF"
         android:textSize="50sp"
         android:textStyle="bold"
@@ -91,7 +91,7 @@
         android:layout_height="68dp"
         android:layout_marginBottom="176dp"
         android:backgroundTint="#ffb500"
-        android:text="@string/logar"
+        android:text="@string/textLogin"
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="20sp"
