--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -25,13 +25,19 @@
 
     <fragment
         android:id="@+id/nav_cart"
-        android:name="com.example.taptake.ui.requests.RequestsFragment"
+        android:name="com.example.taptake.ui.cart.CartFragment"
         android:label="@string/menu_cart"
-        tools:layout="@layout/fragment_requests" />
+        tools:layout="@layout/fragment_cart" />
 
     <fragment
         android:id="@+id/nav_requests"
         android:name="com.example.taptake.ui.requests.RequestsFragment"
         android:label="@string/menu_requests"
         tools:layout="@layout/fragment_requests" />
+
+    <fragment
+        android:id="@+id/nav_restaurant"
+        android:name="com.example.taptake.ui.restaurant.RestaurantFragment"
+        android:label="Nome Restaurante"
+        tools:layout="@layout/fragment_restaurant" />
 </navigation>
