--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -53,7 +53,7 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
-        android:id="@+id/singUp"
+        android:id="@+id/signUp"
         android:layout_width="367dp"
         android:layout_height="55dp"
         android:layout_centerHorizontal="true"
