--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -31,7 +31,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/fundoSignUp"
         app:layout_constraintVertical_bias="0.387"
-        app:srcCompat="@drawable/fundologoloagind" />
+        app:srcCompat="@drawable/fundologoloagind"
+        android:contentDescription="@string/background_image_2" />
 
     <TextView
         android:id="@+id/textView2"
@@ -62,7 +63,8 @@
         app:layout_constraintHorizontal_bias="0.477"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/imageView9"
-        app:layout_constraintVertical_bias="0.705" />
+        app:layout_constraintVertical_bias="0.705"
+        android:autofillHints="" />
 
     <EditText
         android:id="@+id/edit_text_email_address"
@@ -74,14 +76,14 @@
         android:ems="10"
         android:hint="@string/email"
         android:inputType="textEmailAddress"
-
         android:padding="20dp"
         app:layout_constraintBottom_toTopOf="@+id/edit_text_password"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.488"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2"
-        app:layout_constraintVertical_bias="0.453" />
+        app:layout_constraintVertical_bias="0.453"
+        android:autofillHints="" />
 
     <EditText
         android:id="@+id/edit_text_password"
@@ -98,7 +100,8 @@
         app:layout_constraintBottom_toTopOf="@+id/edit_text_password_confirm"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.528"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        android:autofillHints="" />
 
     <EditText
         android:id="@+id/edit_text_password_confirm"
@@ -115,7 +118,8 @@
         app:layout_constraintBottom_toTopOf="@+id/buttonCadastrar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.494"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        android:autofillHints="" />
 
     <TextView
         android:id="@+id/textErrorName"
@@ -182,7 +186,7 @@
         android:layout_height="68dp"
         android:layout_marginBottom="64dp"
         android:backgroundTint="#ffb500"
-        android:text="@string/SignUp"
+        android:text="@string/signUp"
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="20sp"
